--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
     <link rel='stylesheet'  href='https://www.herbal.ml/css/divi/et-critical-inline-css.css?v1' type='text/css' media='all' />
     <link rel="stylesheet" id="et-core-unified-2-cached-inline-styles" href="https://www.herbal.ml/css/et-core-unified-2.min.css?v5" />
-    <link rel="preload" as="style" id="et-core-unified-tb-12-tb-31-deferred-2-cached-inline-styles" href="https://www.herbal.ml/css/et-core-unified-tb-12-tb-31-deferred-2.min.css?v193" onload="this.onload=null;this.rel='stylesheet';" />
+    <link rel="preload" as="style" id="et-core-unified-tb-12-tb-31-deferred-2-cached-inline-styles" href="https://www.herbal.ml/css/et-core-unified-tb-12-tb-31-deferred-2.min.css?v1957667" onload="this.onload=null;this.rel='stylesheet';" />
 
     <style type="text/css">/** Mega Menu CSS: fs **/</style>
 
@@ -430,7 +430,7 @@
 
                                                        
                                                         <div class="owl-slider item">
-                                                            <div class="feature-slider" style="background-image: url('https://www.herbal.ml/img/herbalist_vape_banner.jpg');">
+                                                            <div class="feature-slider" style="background-image: url('https://www.herbal.ml/img/volcan-arenal.jpg');">
                                                                 <div class="slider-content et_pb_row">
                                                                     <h2 class="custom-slider-text herbalist-kit">Smoke Shop #1 en Costa Rica</h2>
                                                                     <a class="more btn btn--black" target="" href="https://www.herbal.ml/shop/">
