--- a/index.html
+++ b/index.html
@@ -767,8 +767,8 @@ Cuando se trata de intentar animar una fiesta o socializar con tus amigos, no ha
 
                             <a href="https://www.herbal.ml/">
                             <span class="et_pb_image_wrap ">
-                            <img src="https://www.herbal.ml/img/ig-logo.jpg" alt="herbalist smoke shop costa rica" title="logo" class="wp-image-16" />
-                            </span>
+                            <img src="https://www.herbal.ml/img/full-herbalist-logo-png.png" alt="herbalist smoke shop costa rica" title="logo" class="wp-image-16" />
+                            </span> 
                             </a>
 
                         </div>
