--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                                                 <a class="mega-menu-link" href="https://www.herbal.ml/shop/vapes/" tabindex="0">Vapes</a>
                                             </li>
                                             <li class="mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-align-bottom-left mega-menu-flyout mega-menu-item-611" id="mega-menu-item-611">
-                                                <a class="mega-menu-link" href="https://www.herbal.ml/shop/grinders/" tabindex="0">Grinders</a>
+                                                <a class="mega-menu-link" href="https://www.herbal.ml/shop/picadoras/" tabindex="0">Picadoras</a>
                                             </li>
                                             <li class="mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-align-bottom-left mega-menu-flyout mega-menu-item-611" id="mega-menu-item-611">
                                                 <a class="mega-menu-link" href="https://www.herbal.ml/shop/cbd/" tabindex="0">CBD</a>
