--- a/shop/picadoras/index.html
+++ b/shop/picadoras/index.html
@@ -53,12 +53,12 @@
     </script>
 
     <!-- This site is optimized with the Yoast SEO Premium plugin v17.7 (Yoast SEO v17.7.1) - https://yoast.com/wordpress/plugins/seo/ -->
-    <title>Grinders | Herbalist Smoke Shop</title>
+    <title>Picadoras | Herbalist Smoke Shop</title>
     <meta name="description" content="Tienda #1 en accesorios 420 para fumar con bongs, pipas de vidrio, vaporizadores, boletas y picadoras. Envío gratis y discreto a su puerta." />
     <link rel="canonical" href="https://www.herbal.ml/shop/picadoras/" />
     <meta property="og:locale" content="es_CR" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Grinders | Herbalist Smoke Shop" />
+    <meta property="og:title" content="Picadoras | Herbalist Smoke Shop" />
     <meta property="og:description" content="Tienda #1 en accesorios 420 para fumar con bongs, pipas de vidrio, vaporizadores, boletas y picadoras. Envío gratis y discreto a su puerta." />
     <meta property="og:url" content="https://www.herbal.ml/shop/picadoras/" />
     <meta property="og:site_name" content="Herbalist Smoke Shop" />
@@ -182,7 +182,7 @@
                             <a class="mega-menu-link" href="https://www.herbal.ml/shop/vapes/" tabindex="0">Vapes</a>
                         </li>
                         <li class="mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-align-bottom-left mega-menu-flyout mega-menu-item-611" id="mega-menu-item-611">
-                            <a class="mega-menu-link" href="https://www.herbal.ml/shop/picadoras/" tabindex="0">Grinders</a>
+                            <a class="mega-menu-link" href="https://www.herbal.ml/shop/picadoras/" tabindex="0">Picadoras</a>
                         </li>
                         <li class="mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-align-bottom-left mega-menu-flyout mega-menu-item-611" id="mega-menu-item-611">
                             <a class="mega-menu-link" href="https://www.herbal.ml/shop/cbd/" tabindex="0">CBD</a>
