--- a/shop/vapes/index.html
+++ b/shop/vapes/index.html
@@ -589,7 +589,7 @@
                                                     <h2 class="et_pb_module_header"><span>Yocan Hive 2.0 Vapo</span></h2>
 
                                                     <div class="et_pb_blurb_description">
-                                                        <p class="custom-btn-price"><strong>$56.99</strong></p>
+                                                        <p class="custom-btn-price"><strong>₡52.000</strong></p>
                                                         <p class="custom-btn-comprar">
                                                             <a class="more btn btn--black" target="" href="https://wa.me/50664682074/?text=">
                                                                 <span class="text">Comprar</span>
@@ -612,7 +612,7 @@
                                                 <div class="et_pb_blurb_container">
                                                     <h2 class="et_pb_module_header"><span>Yocan Uni Box Mod Vapo</span></h2>
                                                     <div class="et_pb_blurb_description">
-                                                        <p class="custom-btn-price"><strong>$74.00</strong></p>
+                                                        <p class="custom-btn-price"><strong>₡54.000</strong></p>
                                                         <p class="custom-btn-comprar">
                                                             <a class="more btn btn--black" target="" href="https://wa.me/50664682074/?text=">
                                                                 <span class="text">Comprar</span>
@@ -636,9 +636,9 @@
                                             <div class="et_pb_blurb_content">
                                                 <div class="et_pb_main_blurb_image"><span class="et_pb_image_wrap et_pb_only_image_mode_wrap"><img width="960" height="960" src="https://www.herbal.ml/img/products/vapes/Pulsar-apx-tiedye_large_492513cb-a0ca-4055-a52f-e6711514df5d_600x.jpg" alt=""   class="et-waypoint et_pb_animation_top et_pb_animation_top_tablet et_pb_animation_top_phone wp-image-2783 lazyload" data-src="https://www.herbal.ml/img/products/vapes/Pulsar-apx-tiedye_large_492513cb-a0ca-4055-a52f-e6711514df5d_600x.jpg" loading="lazy" data-srcset="https://www.herbal.ml/img/products/vapes/Pulsar-apx-tiedye_large_492513cb-a0ca-4055-a52f-e6711514df5d_600x.jpg 960w, https://www.herbal.ml/img/products/vapes/Pulsar-apx-tiedye_large_492513cb-a0ca-4055-a52f-e6711514df5d_600x.jpg 300w, https://www.herbal.ml/img/products/vapes/Pulsar-apx-tiedye_large_492513cb-a0ca-4055-a52f-e6711514df5d_600x.jpg 150w, https://www.herbal.ml/img/products/vapes/Pulsar-apx-tiedye_large_492513cb-a0ca-4055-a52f-e6711514df5d_600x.jpg 768w, https://www.herbal.ml/img/products/vapes/Pulsar-apx-tiedye_large_492513cb-a0ca-4055-a52f-e6711514df5d_600x.jpg 480w" data-sizes="auto" /><noscript><img width="960" height="960" src="https://www.herbal.ml/img/products/vapes/Pulsar-apx-tiedye_large_492513cb-a0ca-4055-a52f-e6711514df5d_600x.jpg" alt="" srcset="https://www.herbal.ml/img/products/vapes/Pulsar-apx-tiedye_large_492513cb-a0ca-4055-a52f-e6711514df5d_600x.jpg 960w, https://www.herbal.ml/img/products/vapes/Pulsar-apx-tiedye_large_492513cb-a0ca-4055-a52f-e6711514df5d_600x.jpg 300w, https://www.herbal.ml/img/products/vapes/Pulsar-apx-tiedye_large_492513cb-a0ca-4055-a52f-e6711514df5d_600x.jpg 150w, https://www.herbal.ml/img/products/vapes/Pulsar-apx-tiedye_large_492513cb-a0ca-4055-a52f-e6711514df5d_600x.jpg 768w, https://www.herbal.ml/img/products/vapes/Pulsar-apx-tiedye_large_492513cb-a0ca-4055-a52f-e6711514df5d_600x.jpg 480w" sizes="(max-width: 960px) 100vw, 960px" class="et-waypoint et_pb_animation_top et_pb_animation_top_tablet et_pb_animation_top_phone wp-image-2783" data-eio="l" /></noscript></span></div>
                                                 <div class="et_pb_blurb_container">
-                                                    <h2 class="et_pb_module_header"><span>Pulsar APX 2 Vaporizer - Tie Die</span></h2>
+                                                    <h2 class="et_pb_module_header"><span>Pulsar APX</span></h2>
                                                     <div class="et_pb_blurb_description">
-                                                        <p class="custom-btn-price"><strong>$69.99</strong></p>
+                                                        <p class="custom-btn-price"><strong>₡69.000</strong></p>
                                                         <p class="custom-btn-comprar">
                                                             <a class="more btn btn--black" target="" href="https://wa.me/50664682074/?text=">
                                                                 <span class="text">Comprar</span>
@@ -666,7 +666,7 @@
                                                         <h2 class="et_pb_module_header"><span>G Pen Slim BUSH Snoop Dogg Hookah</span></h2>
 
                                                         <div class="et_pb_blurb_description">
-                                                            <p class="custom-btn-price"><strong>$44.95</strong></p>
+                                                            <p class="custom-btn-price"><strong>₡40.000</strong></p>
                                                             <p class="custom-btn-comprar">
                                                                 <a class="more btn btn--black" target="" href="https://wa.me/50664682074/?text=">
                                                                     <span class="text">Comprar</span>
