--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
                                                         <div class="owl-slider item">
                                                             <div class="feature-slider" style="background-image: url('https://www.herbal.ml/img/volcan-arenal.jpg');">
                                                                 <div class="slider-content et_pb_row">
-                                                                    <h2 class="custom-slider-text herbalist-kit">Smoke Shop #1 en Costa Rica</h2>
+                                                                    <h2 class="custom-slider-text herbalist-kit">CBD, Bongs, pipas & accesorios</h2>
                                                                     <a class="more btn btn--black" target="" href="https://www.herbal.ml/shop/">
                                                                         <span class="text">Comprar</span>
                                                                         <span class="bg"> </span>
@@ -479,7 +479,7 @@
                                         <div class="et_pb_column et_pb_column_4_4 et_pb_column_1  et_pb_css_mix_blend_mode_passthrough et-last-child">
                                             <div class="et_pb_module et_pb_text et_pb_text_1  et_pb_text_align_center et_pb_bg_layout_light">
                                                 <div class="et_pb_text_inner">
-                                                    <h1>Bongs, pipas, CBD, accesorios para fumar & más</h1>
+                                                    <h1>Smoke Shop #1 en Costa Rica</h1>
                                                 </div>
                                             </div>
                                         </div>
