--- a/shop/picadoras/index.html
+++ b/shop/picadoras/index.html
@@ -356,7 +356,7 @@
             </div>
 
             <div class="et_pb_button_module_wrapper et_pb_button_9_tb_header_wrapper  et_pb_module ">
-                <a class="et_pb_button et_pb_button_9_tb_header et_pb_bg_layout_light" href="https://www.herbal.ml/shop/picadoras/">Grinders</a>
+                <a class="et_pb_button et_pb_button_9_tb_header et_pb_bg_layout_light" href="https://www.herbal.ml/shop/picadoras/">Picadoras</a>
             </div>
 
             <div class="et_pb_button_module_wrapper et_pb_button_8_tb_header_wrapper  et_pb_module ">
@@ -492,7 +492,7 @@
                                     <div class="et_pb_with_border et_pb_row et_pb_row_1">
                                         <div class="et_pb_column et_pb_column_1_2 et_pb_column_1  et_pb_css_mix_blend_mode_passthrough">
                                             <div class="et_pb_module et_pb_text et_pb_text_1  et_pb_text_align_left et_pb_bg_layout_light">
-                                                <div class="et_pb_text_inner"><h1>Grinders</h1></div>
+                                                <div class="et_pb_text_inner"><h1>Picadoras</h1></div>
                                             </div>
 
                                             <div class="et_pb_module et_pb_text et_pb_text_1  et_pb_text_align_left et_pb_bg_layout_light">
