--- a/shop/vapes/index.html
+++ b/shop/vapes/index.html
@@ -185,7 +185,7 @@
             <a class="mega-menu-link" href="https://www.herbal.ml/shop/vapes/" tabindex="0">Vapes</a>
         </li>
         <li class="mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-align-bottom-left mega-menu-flyout mega-menu-item-611" id="mega-menu-item-611">
-            <a class="mega-menu-link" href="https://www.herbal.ml/shop/picadoras/" tabindex="0">Grinders</a>
+            <a class="mega-menu-link" href="https://www.herbal.ml/shop/picadoras/" tabindex="0">Picadoras</a>
         </li>
         <li class="mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-align-bottom-left mega-menu-flyout mega-menu-item-611" id="mega-menu-item-611">
             <a class="mega-menu-link" href="https://www.herbal.ml/shop/cbd/" tabindex="0">CBD</a>
@@ -358,7 +358,7 @@
                                 </div>
         
                                 <div class="et_pb_button_module_wrapper et_pb_button_9_tb_header_wrapper  et_pb_module ">
-                                    <a class="et_pb_button et_pb_button_9_tb_header et_pb_bg_layout_light" href="https://www.herbal.ml/shop/picadoras/">Grinders</a>
+                                    <a class="et_pb_button et_pb_button_9_tb_header et_pb_bg_layout_light" href="https://www.herbal.ml/shop/picadoras/">Picadoras</a>
                                 </div>
         
                                 <div class="et_pb_button_module_wrapper et_pb_button_8_tb_header_wrapper  et_pb_module ">
