--- a/index.html
+++ b/index.html
@@ -344,10 +344,6 @@
                                 <a class="et_pb_button et_pb_button_8_tb_header et_pb_bg_layout_light" href="https://www.herbal.ml/shop/cultivo/">Cultivo</a>
                             </div>
 
-                            <div class="et_pb_button_module_wrapper et_pb_button_8_tb_header_wrapper  et_pb_module ">
-                                <a class="et_pb_button et_pb_button_8_tb_header et_pb_bg_layout_light" href="https://www.herbal.ml/shop/ropa/">Ropa</a>
-                            </div>
-
                               <div class="et_pb_button_module_wrapper et_pb_button_11_tb_header_wrapper  et_pb_module ">
                                 <a class="et_pb_button et_pb_button_11_tb_header et_pb_bg_layout_light" href="https://www.herbal.ml/shop/accesorios/">Accesorios</a>
                             </div>
@@ -573,8 +569,8 @@
                                     <div class="et_pb_module et_pb_text et_pb_text_6  et_pb_text_align_left et_pb_bg_layout_light">
 
 
-                                        <div class="et_pb_text_inner"><h2>Ropa <span class="float-right-text">
-                                            <a href="https://www.herbal.ml/shop/ropa/">Ver más &gt;&gt;&gt;</a></span></h2>
+                                        <div class="et_pb_text_inner"><h2>Ropa 420 <span class="float-right-text">
+                                            <a href="https://www.herbal.ml/shop/ropa/">Ver ropa &gt;&gt;&gt;</a></span></h2>
                                         </div>
 
 
