--- a/shop/pipas/index.html
+++ b/shop/pipas/index.html
@@ -1067,7 +1067,7 @@ Apisonadora Marley Natural Rise Up</a>&nbsp;</span>- Disfrutará golpeando con e
                                             </h2>
 
 
-                                            <p>¡En Herbalist.ml, tenemos pipas de vidrio clásicas, pipas de un solo uso y pipas de metal de la mejor calidad para cada preferencia y personalidad! Si está buscando una pipa de mano pequeña que sea un poco diferente, consulte nuestra&nbsp;
+                                            <p>¡En herbal.ml, tenemos pipas de vidrio clásicas, pipas de un solo uso y pipas de metal de la mejor calidad para cada preferencia y personalidad! Si está buscando una pipa de mano pequeña que sea un poco diferente, consulte nuestra&nbsp;
                                                 <meta charset="utf-8">
                                                 <span data-mce-fragment="1">Blunt de vidrio</span> o una <meta charset="utf-8">
                                                 <span data-mce-fragment="1">Pipa Mini de Elefante</span>.
@@ -1216,7 +1216,7 @@ Apisonadora Marley Natural Rise Up</a>&nbsp;</span>- Disfrutará golpeando con e
 
                                 <div class="et_pb_module et_pb_text et_pb_text_7_tb_footer inline-block  et_pb_text_align_left et_pb_bg_layout_light">
                                     <div class="et_pb_text_inner">
-                                        <a href="mailto:shop@herbalist.ml" target="_blank">shop@herbalist.ml</a> <a href="https://www.herbal.ml/privacy-policy/" target="_blank">Política de Privacidad</a> <a href="https://www.ripen.ga/" target="_blank">Powered by <b>RIPEN</b> </a>
+                                        <a href="mailto:shop@herbal.ml" target="_blank">shop@herbal.ml</a> <a href="https://www.herbal.ml/privacy-policy/" target="_blank">Política de Privacidad</a> <a href="https://www.ripen.ga/" target="_blank">Powered by <b>RIPEN</b> </a>
                                     </div>
                                 </div>
 
