--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
                             <div class="et_pb_button_module_wrapper et_pb_button_9_tb_header_wrapper  et_pb_module ">
                                 <a class="et_pb_button et_pb_button_9_tb_header et_pb_bg_layout_light" href="https://www.herbal.ml/shop/pipas/">Pipas</a>
                             </div>
-
+ 
                             <div class="et_pb_button_module_wrapper et_pb_button_8_tb_header_wrapper  et_pb_module ">
                                 <a class="et_pb_button et_pb_button_8_tb_header et_pb_bg_layout_light" href="https://www.herbal.ml/shop/bongs/">Bongs</a>
                             </div>
@@ -333,7 +333,7 @@
                             </div>
 
                             <div class="et_pb_button_module_wrapper et_pb_button_10_tb_header_wrapper  et_pb_module ">
-                                <a class="et_pb_button et_pb_button_10_tb_header et_pb_bg_layout_light" href="https://www.herbal.ml/shop/picadoras/">Grinders</a>
+                                <a class="et_pb_button et_pb_button_10_tb_header et_pb_bg_layout_light" href="https://www.herbal.ml/shop/picadoras/">Picadoras</a>
                             </div>
 
                             <div class="et_pb_button_module_wrapper et_pb_button_8_tb_header_wrapper  et_pb_module ">
@@ -523,12 +523,12 @@
                                                         </div>
                                                     </div><div class="shop-module">
                                                         <div class="shop-content">
-                                                            <h2>Grinders</h2>
+                                                            <h2>Picadoras</h2>
                                                             <div class="shop-image">
                                                                 <a href="https://www.herbal.ml/shop/picadoras/"><img src="https://www.herbal.ml/img/icons/grinder-icon.jpg" alt="picadoras o grinders costa rica" /></a>
                                                             </div>
                                                             <p>
-                                                                El grinder es una de las herramientas más importantes que puede tener cualquier stoner. Para moler esas hierbas secas y hacerlas perfectas para un humo suave, se necesita un grinder fuerte.
+                                                                La pícadora o grinder es una de las herramientas más importantes que puede tener cualquier stoner. Para moler esas hierbas secas y hacerlas perfectas para un humo suave, se necesita un grinder fuerte.
                                                             </p>
                                                             <a class="more" href="https://www.herbal.ml/shop/picadoras/" target="">Ver más &gt;&gt;&gt;</a>
                                                         </div>
