--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
 
                                                        
                                                         <div class="owl-slider item">
-                                                            <div class="feature-slider" style="background-image: url('https://www.herbal.ml/img/kanye-west-weed-herbalist.jpeg');">
+                                                            <div class="feature-slider" style="background-image: url('https://www.herbal.ml/img/smoking.jpeg');">
                                                                 <div class="slider-content et_pb_row">
                                                                     <h2 class="custom-slider-text herbalist-kit">CBD, Bongs, pipas & accesorios</h2>
                                                                     <a class="more btn btn--black" target="" href="https://www.herbal.ml/shop/">
