--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
                                                         <div class="owl-slider item">
                                                             <div class="feature-slider" style="background-image: url('https://www.herbal.ml/img/bong-girl.jpg');">
                                                                 <div class="slider-content et_pb_row">
-                                                                    <h2 class="custom-slider-text herbalist-kit">CBD, Bongs, pipas & accesorios</h2>
+                                                                    <h2 class="custom-slider-text herbalist-kit">CBD, bongs, pipas, accesorios</h2>
                                                                     <a class="more btn btn--black" target="" href="https://www.herbal.ml/shop/">
                                                                         <span class="text">Ordenar</span>
                                                                         <span class="bg"> </span>
