--- a/index.html
+++ b/index.html
@@ -738,7 +738,7 @@ Cuando se trata de intentar animar una fiesta o socializar con tus amigos, no ha
 
                         <div class="et_pb_with_border et_pb_module et_pb_text et_pb_text_2_tb_footer et_clickable  et_pb_text_align_left et_pb_bg_layout_light">
 
-                            <div class="et_pb_text_inner"><h2>La mejor smoke shop online</h2>
+                            <div class="et_pb_text_inner"><h2>online smoke shop</h2>
                             </div>
 
                         </div>
@@ -746,7 +746,7 @@ Cuando se trata de intentar animar una fiesta o socializar con tus amigos, no ha
 
                         <div class="et_pb_module et_pb_text et_pb_text_3_tb_footer  et_pb_text_align_left et_pb_bg_layout_light">
                         <div class="et_pb_text_inner">
-                            <p>Hemos ayudado a proveer accesorios de calidad a miles de clientes satisfechos en Costa Rica. Estamos disponibles en cualquier lugar, las 24 horas del día, con los mejores accesorios para fumar. 🔥</p>
+                            <p>Hemos ayudado a proveer accesorios de calidad a miles de clientes satisfechos en Costa Rica. Estamos disponibles en cualquier lugar, las 24 horas del día, con los mejores accesorios para fumar.</p>
                         </div>
                     </div>
                     </div>
