--- a/shop/vapes/index.html
+++ b/shop/vapes/index.html
@@ -53,12 +53,12 @@
     </script>
 
     <!-- This site is optimized with the Yoast SEO Premium plugin v17.7 (Yoast SEO v17.7.1) - https://yoast.com/wordpress/plugins/seo/ -->
-    <title>Vapes - Herbalist Smoke Shop</title>
+    <title>Vaporizadores - Herbalist Smoke Shop</title>
     <meta name="description" content="Compre los mejores vaporizadores de marihuana para cannabis y hierbas secas. Tenemos las mejores marcas y vaporizadores de la más alta tecnología, vaporizadores portátiles." />
     <link rel="canonical" href="https://www.herbal.ml/shop/vapes/" />
     <meta property="og:locale" content="es_CR" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Vapes - Herbalist Smoke Shop" />
+    <meta property="og:title" content="Vaporizadores - Herbalist Smoke Shop" />
     <meta property="og:description" content="Compre los mejores vaporizadores de marihuana para cannabis y hierbas secas. Tenemos las mejores marcas y vaporizadores de la más alta tecnología, vaporizadores portátiles." />
     <meta property="og:url" content="https://www.herbal.ml/shop/vapes/" />
     <meta property="og:site_name" content="Herbalist Smoke Shop" />
@@ -350,7 +350,7 @@
                                 </div>
         
                                 <div class="et_pb_button_module_wrapper et_pb_button_9_tb_header_wrapper  et_pb_module ">
-                                    <a class="et_pb_button et_pb_button_9_tb_header et_pb_bg_layout_light" href="https://www.herbal.ml/shop/vapes/">Vapes</a>
+                                    <a class="et_pb_button et_pb_button_9_tb_header et_pb_bg_layout_light" href="https://www.herbal.ml/shop/vapes/">Vaporizadores</a>
                                 </div>
         
                                 <div class="et_pb_button_module_wrapper et_pb_button_9_tb_header_wrapper  et_pb_module ">
@@ -436,7 +436,7 @@
                                     <div class="et_pb_with_border et_pb_row et_pb_row_1">
                                         <div class="et_pb_column et_pb_column_1_2 et_pb_column_1  et_pb_css_mix_blend_mode_passthrough">
                                             <div class="et_pb_module et_pb_text et_pb_text_1  et_pb_text_align_left et_pb_bg_layout_light">
-                                                <div class="et_pb_text_inner"><h1>Vapes</h1></div>
+                                                <div class="et_pb_text_inner"><h1>Vaporizadores</h1></div>
                                             </div>
 
                                             <div class="et_pb_module et_pb_text et_pb_text_1  et_pb_text_align_left et_pb_bg_layout_light">
