--- a/shop/index.html
+++ b/shop/index.html
@@ -637,7 +637,7 @@ heateor_sss_vertical_sharing{
 
                             <div class="et_pb_module et_pb_text et_pb_text_3_tb_footer  et_pb_text_align_left et_pb_bg_layout_light">
                                 <div class="et_pb_text_inner">
-                                    <p>Hemos ayudado a proveer accesorios de calidad a miles de clientes satisfechos en Costa Rica. Estamos disponibles en cualquier lugar, las 24 horas del día, con los mejores accesorios para fumar. 🔥</p>
+                                    <p>Hemos ayudado a proveer accesorios de calidad a miles de clientes satisfechos en Costa Rica. Estamos disponibles en cualquier lugar, las 24 horas del día, con los mejores accesorios para fumar.</p>
                                 </div>
                         </div>
                         </div>
@@ -695,7 +695,7 @@ heateor_sss_vertical_sharing{
                             <div class="et_pb_column et_pb_column_1_2 et_pb_column_4_tb_footer  et_pb_css_mix_blend_mode_passthrough">
                                 <div class="et_pb_module et_pb_text et_pb_text_6_tb_footer inline-block  et_pb_text_align_left et_pb_bg_layout_light">
                                     <div class="et_pb_text_inner">
-                                        <p>© Herbalist Smoke Shop 2022 | ® Todos los Derechos Reservados.<hr></p>
+                                        <p>® Herbalist Smoke Shop 2023 | © Todos los Derechos Reservados.<hr></p>
                                         <p>📍 Barrio Escalante, San José, Costa Rica.</p>
                                     </div>
                                 </div>
@@ -717,7 +717,7 @@ heateor_sss_vertical_sharing{
                                 </div>-->
 
                                 <div class="et_pb_module et_pb_image et_pb_image_1_tb_footer">
-                                    <a href="https://wa.me/50664682074/?text=Por favor escríba aquí su consulta:)" target="_blank" class="custom-a-social">
+                                    <a href="https://wa.me/50664682074/?text=" target="_blank" class="custom-a-social">
                                         <i class="fab fa-whatsapp sap-icon"></i>
                                     </a>
                                 </div>
