--- a/shop/pipas/index.html
+++ b/shop/pipas/index.html
@@ -456,8 +456,6 @@
                                                 <div class="et_pb_text_inner">
                                                     <h4>
                                                         Pipas en una gran variedad de diseños y colores. Las pipas son una pieza esencial para cualquier fumador. Fume con estilo y elija su pipa favorita entre nuestra amplia colección.
-                                                        <br><br>
-                                                        Sherlock Holmes, Gandalf y Einstein. Si deseas unirte a los grandes de la historia que usan pipas, tenemos una variedad de pipas de vidrio con diseños únicos.
                                                     </h4>
                                                 </div>
                                             </div>
@@ -1209,7 +1207,7 @@ Apisonadora Marley Natural Rise Up</a>&nbsp;</span>- Disfrutará golpeando con e
 
                                 <div class="et_pb_module et_pb_text et_pb_text_6_tb_footer inline-block  et_pb_text_align_left et_pb_bg_layout_light">
                                     <div class="et_pb_text_inner">
-                                        <p>© Herbalist Smoke Shop 2022 | ® Todos los Derechos Reservados.<hr></p>
+                                        <p>® Herbalist Smoke Shop 2023 | © Todos los Derechos Reservados.<hr></p>
                                         <p>📍 Barrio Escalante, San José, Costa Rica.</p>
                                     </div>
                                 </div>
@@ -1233,7 +1231,7 @@ Apisonadora Marley Natural Rise Up</a>&nbsp;</span>- Disfrutará golpeando con e
 
                                 <div class="et_pb_module et_pb_text et_pb_text_10_tb_footer inline-block  et_pb_text_align_left et_pb_bg_layout_light">
                                 <div class="et_pb_text_inner">
-                                    <p>© Herbalist Smoke Shop 2022 | ® Todos los Derechos Reservados.<hr></p>
+                                    <p>® Herbalist Smoke Shop 2022 | © Todos los Derechos Reservados.<hr></p>
                                     <p>📍 Barrio Escalante, San José, Costa Rica.</p>
                                 </div>
                             </div>
