--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
                                                                 <div class="slider-content et_pb_row">
                                                                     <h2 class="custom-slider-text herbalist-kit">CBD, bongs, pipas, accesorios</h2>
                                                                     <a class="more btn btn--black" target="" href="https://www.herbal.ml/shop/">
-                                                                        <span class="text">Ordenar</span>
+                                                                        <span class="text">Shop</span>
                                                                         <span class="bg"> </span>
                                                                     </a>
                                                                 </div>
