--- a/index.html
+++ b/index.html
@@ -427,8 +427,8 @@
                                                             <div class="feature-slider" style="background-image: url('https://www.herbal.ml/img/herbalist_vape_banner.jpg');">
                                                                 <div class="slider-content et_pb_row">
                                                                     <h2 class="custom-slider-text herbalist-kit">CBD, bongs, pipas, accesorios</h2>
-                                                                    <a class="more btn btn--black" target="" href="https://www.herbal.ml/shop/">
-                                                                        <span class="text">Shop</span>
+                                                                    <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/tienda/">
+                                                                        <span class="text">Comprar</span>
                                                                         <span class="bg"> </span>
                                                                     </a>
                                                                 </div>
