--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
 
                                                        
                                                         <div class="owl-slider item">
-                                                            <div class="feature-slider" style="background-image: url('https://www.herbal.ml/img/herbalist_vape_banner.jpg');">
+                                                            <div class="feature-slider" style="background-image: url('https://www.herbal.ml/img/herbal-banner.jpg');">
                                                                 <div class="slider-content et_pb_row">
                                                                     <h2 class="custom-slider-text herbalist-kit">CBD, bongs, pipas, accesorios</h2>
                                                                     <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/tienda/">
