--- a/index.html
+++ b/index.html
@@ -474,6 +474,9 @@
                                             <div class="et_pb_module et_pb_text et_pb_text_1  et_pb_text_align_center et_pb_bg_layout_light">
                                                 <div class="et_pb_text_inner">
                                                     <h1>Smoke Shop</h1>
+
+                                                    <p class="has-text-align-center has-medium-font-size">Somos una tienda online dedicada a ofrecer accesorios para fumar entregados discretamente hasta tu puerta. Ofrecemos envío rápido, servicio amable y discreto.</p>
+
                                                 </div>
                                             </div>
                                         </div>
