--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <link rel='stylesheet' id='divi-style-css'  href='https://www.herbal.ml/css/divi-child/style.css?ver=1.2.022' type='text/css' media='all' />
 
     <!-- custom css -->
-    <link rel='stylesheet'  href='https://www.herbal.ml/css/custom.css?2.5' type='text/css' media='all' />
+    <link rel='stylesheet'  href='https://www.herbal.ml/css/custom.css?2.6' type='text/css' media='all' />
     <!-- custom css -->
 
     <link rel='shortlink' href='https://www.herbal.ml/' />
@@ -473,7 +473,7 @@
                                         <div class="et_pb_column et_pb_column_4_4 et_pb_column_1  et_pb_css_mix_blend_mode_passthrough et-last-child">
                                             <div class="et_pb_module et_pb_text et_pb_text_1  et_pb_text_align_center et_pb_bg_layout_light">
                                                 <div class="et_pb_text_inner">
-                                                    <h1>Smoke Shop</h1>
+                                                    <h1>Herbalist Smoke Shop</h1>
 
                                                     <p class="has-text-align-center has-medium-font-size">Somos una tienda online dedicada a ofrecer accesorios para fumar entregados discretamente hasta tu puerta. Ofrecemos envío rápido, servicio amable y discreto.</p>
 
